--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_en.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_en.properties
@@ -1262,6 +1262,7 @@ UIAddNewApplication.label.AddToStartup=Add and Run this application immediately
   
 UIPortalNavigation.Label.Next=Next
 UIPortalNavigation.Label.Previous=Previous
+UIPortalNavigation.msg.staleData=Node may be deleted
 
   #############################################################################
   #    org.exoplatform.portal.component.customization.UIDropDownConfigs #
