--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ko.xml
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ko.xml
@@ -614,7 +614,7 @@
          <done>완료</done>
       </action>
    </UIGroupSelector>
-   <UIPageSelector2>
+   <UIPageSelector>
       <header>
          <name>이름</name>
          <id>페이지 아이디</id>
@@ -631,7 +631,7 @@
          <name>#{word.name}</name>
          <accessGroups>액세스 그룹</accessGroups>
       </label>
-   </UIPageSelector2>
+   </UIPageSelector>
    <UIPageBrowser>
       <msg>
          <NoPermission>이 페이지의 액세스 권한이 없습니다.</NoPermission>
@@ -814,7 +814,7 @@
          <label>
             <PageNodeSetting>페이지 노드 설정</PageNodeSetting>
             <Icon>#{word.icon}</Icon>
-            <UIPageSelector2>페이지 선택기</UIPageSelector2>
+            <UIPageSelector>페이지 선택기</UIPageSelector>
          </label>
       </tab>
    </UIPageNodeForm>
