--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ne.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ne.properties
@@ -392,18 +392,18 @@ UIGroupSelector.action.done=\u092d\u092f\u094b
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=\u0928\u093e\u092e 
-UIPageSelector2.header.id=\u092a\u0947\u091c Id
-UIPageSelector2.header.accessGroups=\u0905\u0928\u0941\u092e\u0924\u0940 \u092a\u093e\u0909\u0928\u0947 \u0938\u092e\u0941\u0939\u0939\u0930\u0941 
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=\u092a\u0947\u091c \u0916\u093e\u0932\u0940 \u0917\u0930\u094d\u0928\u0941\u0939\u094b\u0938\u094d 
-UIPageSelector2.label.createPage=\u092a\u0947\u091c \u092c\u0928\u093e\u0909\u0928\u0941\u0939\u094b\u0938\u094d 
-UIPageSelector2.label.searchandSelectPage=\u0916\u094b\u091c\u0947\u0930 \u092a\u0947\u091c \u091b\u0928\u094c\u091f \u0917\u0930\u094d\u0928\u0941\u0939\u094b\u0938\u094d 
-UIPageSelector2.label.currentSelectedPage=\u091b\u0928\u094c\u091f \u0917\u0930\u093f\u090f\u0915\u094b \u092a\u0947\u091c\u0915\u094b \u092a\u0930\u093f\u091a\u092f 
-UIPageSelector2.label.title=\u0936\u093f\u0930\u094d\u0937\u0915
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=\u0905\u0928\u0941\u092e\u0924\u0940 \u092a\u093e\u0909\u0928\u0947 \u0938\u092e\u0941\u0939\u0939\u0930\u0941 
+UIPageSelector.header.name=\u0928\u093e\u092e 
+UIPageSelector.header.id=\u092a\u0947\u091c Id
+UIPageSelector.header.accessGroups=\u0905\u0928\u0941\u092e\u0924\u0940 \u092a\u093e\u0909\u0928\u0947 \u0938\u092e\u0941\u0939\u0939\u0930\u0941 
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=\u092a\u0947\u091c \u0916\u093e\u0932\u0940 \u0917\u0930\u094d\u0928\u0941\u0939\u094b\u0938\u094d 
+UIPageSelector.label.createPage=\u092a\u0947\u091c \u092c\u0928\u093e\u0909\u0928\u0941\u0939\u094b\u0938\u094d 
+UIPageSelector.label.searchandSelectPage=\u0916\u094b\u091c\u0947\u0930 \u092a\u0947\u091c \u091b\u0928\u094c\u091f \u0917\u0930\u094d\u0928\u0941\u0939\u094b\u0938\u094d 
+UIPageSelector.label.currentSelectedPage=\u091b\u0928\u094c\u091f \u0917\u0930\u093f\u090f\u0915\u094b \u092a\u0947\u091c\u0915\u094b \u092a\u0930\u093f\u091a\u092f 
+UIPageSelector.label.title=\u0936\u093f\u0930\u094d\u0937\u0915
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=\u0905\u0928\u0941\u092e\u0924\u0940 \u092a\u093e\u0909\u0928\u0947 \u0938\u092e\u0941\u0939\u0939\u0930\u0941 
 UIPageBrowser.msg.NoPermission=\u0924\u092a\u093e\u0908\u0902\u0932\u093e\u0908 \u092f\u094b \u092a\u0947\u091c \u0939\u0947\u0930\u094d\u0928\u0947 \u0905\u0928\u0941\u092e\u0924\u0940 \u091b\u0948\u0928\u0964
 UIPageBrowser.msg.PageNotExist=\u092a\u0947\u091c \u0909\u092a\u0932\u092c\u094d\u0927 \u091b\u0948\u0928\u0964 
 UIPageBrowser.msg.UserNotPermission=\u0924\u092a\u093e\u0908\u0902\u0932\u093e\u0908 \u092f\u094b \u0928\u094b\u0921\u0915\u094b \u092a\u0947\u091c \u0939\u0947\u0930\u094d\u0928\u0947 \u0905\u0928\u0941\u092e\u0924\u0940 \u091b\u0948\u0928\u0964 
@@ -514,7 +514,7 @@ UIPageNodeForm.label.endPublicationDate=\u0905\u0928\u094d\u0924\u093f\u092e\u09
 UIPageNodeForm.Icon.title.SetDefault=\u0921\u093f\u092b\u094c\u0932\u094d\u091f \u092a\u093e\u0909\u0928\u0941\u0939\u094b\u0938\u094d 
 UIPageNodeForm.tab.label.PageNodeSetting=\u092a\u0947\u091c \u0928\u094b\u0921 \u0935\u094d\u092f\u0935\u0938\u094d\u0925\u093e\u092a\u0928
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=\u092a\u0947\u091c\u0915\u094b \u091b\u0928\u094c\u091f\u094d\u0915\u0930\u094d\u0924\u093e 
+UIPageNodeForm.tab.label.UIPageSelector=\u092a\u0947\u091c\u0915\u094b \u091b\u0928\u094c\u091f\u094d\u0915\u0930\u094d\u0924\u093e 
 
   #############################################################################
   #              org.exoplatform.portal.component.customization.UIPageBrowser #
