--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_nl.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_nl.properties
@@ -392,18 +392,18 @@ UIGroupSelector.action.done=#{word.done} :
 #              org.exoplatform.portal.component.customization.UIPageSelector#
 #############################################################################
 
-UIPageSelector2.header.name=#{word.name}:
-UIPageSelector2.header.id=Page Id
-UIPageSelector2.header.accessGroups=Toegang groepen
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Wis pagina
-UIPageSelector2.label.createPage=Cre\u00EBer pagina
-UIPageSelector2.label.searchandSelectPage=Zoek en selecteer pagina
-UIPageSelector2.label.currentSelectedPage=Geselecteerde pagina informatie
-UIPageSelector2.label.title=#{word.title}
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Toegang groepen
+UIPageSelector.header.name=#{word.name}:
+UIPageSelector.header.id=Page Id
+UIPageSelector.header.accessGroups=Toegang groepen
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Wis pagina
+UIPageSelector.label.createPage=Cre\u00EBer pagina
+UIPageSelector.label.searchandSelectPage=Zoek en selecteer pagina
+UIPageSelector.label.currentSelectedPage=Geselecteerde pagina informatie
+UIPageSelector.label.title=#{word.title}
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Toegang groepen
 UIPageBrowser.msg.NoPermission=U heeft geen permissies om deze pagina te bezoeken.
 UIPageBrowser.msg.PageNotExist=Pagina bestaat niet.
 UIPageBrowser.msg.UserNotPermission=U heeft geen permissie op deze node van de pagina.
@@ -514,7 +514,7 @@ UIPageNodeForm.label.endPublicationDate=Eind publicatie datum:
 UIPageNodeForm.Icon.title.SetDefault=Standaard
 UIPageNodeForm.tab.label.PageNodeSetting=Pagina node instellingen
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Pagina selecteur
+UIPageNodeForm.tab.label.UIPageSelector=Pagina selecteur
 
 
 #############################################################################
