--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_pt_BR.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_pt_BR.properties
@@ -388,18 +388,18 @@ UIGroupSelector.action.done=Concluir
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=Nome
-UIPageSelector2.header.id=Id de Página
-UIPageSelector2.header.accessGroups=Grupos de Acesso
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Limpar Página
-UIPageSelector2.label.createPage=Criar Página
-UIPageSelector2.label.searchandSelectPage=Selecionar Página
-UIPageSelector2.label.currentSelectedPage=Informações da Página
-UIPageSelector2.label.title=Título
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Grupos de Acesso
+UIPageSelector.header.name=Nome
+UIPageSelector.header.id=Id de Página
+UIPageSelector.header.accessGroups=Grupos de Acesso
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Limpar Página
+UIPageSelector.label.createPage=Criar Página
+UIPageSelector.label.searchandSelectPage=Selecionar Página
+UIPageSelector.label.currentSelectedPage=Informações da Página
+UIPageSelector.label.title=Título
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Grupos de Acesso
 UIPageBrowser.msg.NoPermission=Usuário sem permissão para acessar essa página.
 UIPageBrowser.msg.PageNotExist=Página não existente.
 UIPageBrowser.msg.UserNotPermission=Usuário sem permissão para acessar o nodo dessa página.
@@ -510,7 +510,7 @@ UIPageNodeForm.label.endPublicationDate=Término de período de publicação:
 UIPageNodeForm.Icon.title.SetDefault=Usar padrão
 UIPageNodeForm.tab.label.PageNodeSetting=Configurações de Nodo
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Seletor de Página
+UIPageNodeForm.tab.label.UIPageSelector=Seletor de Página
 
 
   #############################################################################
