--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_uk.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_uk.properties
@@ -367,18 +367,18 @@ UIGroupSelector.action.done=Виконано
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=Назва
-UIPageSelector2.header.id=Id сторінки
-UIPageSelector2.header.accessGroups=Привілейовані групи
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Почистити сторінку
-UIPageSelector2.label.createPage=Створити сторінку
-UIPageSelector2.label.searchandSelectPage=Пошук і вибір сторінки
-UIPageSelector2.label.currentSelectedPage=Інформація вибраної сторінки
-UIPageSelector2.label.title=Назва
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Привілейовані групи
+UIPageSelector.header.name=Назва
+UIPageSelector.header.id=Id сторінки
+UIPageSelector.header.accessGroups=Привілейовані групи
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Почистити сторінку
+UIPageSelector.label.createPage=Створити сторінку
+UIPageSelector.label.searchandSelectPage=Пошук і вибір сторінки
+UIPageSelector.label.currentSelectedPage=Інформація вибраної сторінки
+UIPageSelector.label.title=Назва
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Привілейовані групи
 UIPageBrowser.msg.NoPermission=У Вас недостатньо прав для доступу на цю сторінку.
 UIPageBrowser.msg.PageNotExist=Сторінка не існує.
 UIPageBrowser.msg.UserNotPermission=У Вас недостатньо прав для доступу на вузлову сторінку.
@@ -489,7 +489,7 @@ UIPageNodeForm.label.endPublicationDate=Кінцева дата публікац
 UIPageNodeForm.Icon.title.SetDefault=Взяти за замовчуванням
 UIPageNodeForm.tab.label.PageNodeSetting=Встановлення вузлової сторінки
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Селектор сторінок
+UIPageNodeForm.tab.label.UIPageSelector=Селектор сторінок
 
 
   #############################################################################
