--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_es.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_es.properties
@@ -390,18 +390,18 @@ UIGroupSelector.action.done=Hecho
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=Nombre
-UIPageSelector2.header.id=Id de P\u00e1gina
-UIPageSelector2.header.accessGroups=Grupos de Acceso
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Limpiar P\u00e1gina
-UIPageSelector2.label.createPage=Crear P\u00e1gina
-UIPageSelector2.label.searchandSelectPage=Buscar y Seleccionar P\u00e1gina
-UIPageSelector2.label.currentSelectedPage=Informaci\u00f3n de la P\u00e1gina Seleccionada
-UIPageSelector2.label.title=T\u00edtulo
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Grupos de Acceso
+UIPageSelector.header.name=Nombre
+UIPageSelector.header.id=Id de P\u00e1gina
+UIPageSelector.header.accessGroups=Grupos de Acceso
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Limpiar P\u00e1gina
+UIPageSelector.label.createPage=Crear P\u00e1gina
+UIPageSelector.label.searchandSelectPage=Buscar y Seleccionar P\u00e1gina
+UIPageSelector.label.currentSelectedPage=Informaci\u00f3n de la P\u00e1gina Seleccionada
+UIPageSelector.label.title=T\u00edtulo
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Grupos de Acceso
 UIPageBrowser.msg.NoPermission=No tienes permisos para acceder a esta p\u00e1gina.
 UIPageBrowser.msg.PageNotExist=La p\u00e1gina no existe.
 UIPageBrowser.msg.UserNotPermission=No tienes permisos para acceder a la p\u00e1gina del nodo.
@@ -512,7 +512,7 @@ UIPageNodeForm.label.endPublicationDate=Fecha de fin de Publicaci\u00f3n:
 UIPageNodeForm.Icon.title.SetDefault=Obtener el por Defecto
 UIPageNodeForm.tab.label.PageNodeSetting=Ajustes de Nodo de P\u00e1gina
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Selector P\u00e1gina
+UIPageNodeForm.tab.label.UIPageSelector=Selector P\u00e1gina
 
 
   #############################################################################
