--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_it.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_it.properties
@@ -408,18 +408,18 @@ UIGroupSelector.title.addGroupButton=Seleziona questo Gruppo
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=Nome
-UIPageSelector2.header.id=Id della Pagina
-UIPageSelector2.header.accessGroups=Accesso ai Gruppi
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Azzera la pagina
-UIPageSelector2.label.createPage=Crea la Pagina
-UIPageSelector2.label.searchandSelectPage=Ricerca e seleziona la Pagina
-UIPageSelector2.label.currentSelectedPage=Info sulla Pagina selezionata
-UIPageSelector2.label.title=Titolo
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Accesso ai Gruppi
+UIPageSelector.header.name=Nome
+UIPageSelector.header.id=Id della Pagina
+UIPageSelector.header.accessGroups=Accesso ai Gruppi
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Azzera la pagina
+UIPageSelector.label.createPage=Crea la Pagina
+UIPageSelector.label.searchandSelectPage=Ricerca e seleziona la Pagina
+UIPageSelector.label.currentSelectedPage=Info sulla Pagina selezionata
+UIPageSelector.label.title=Titolo
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Accesso ai Gruppi
 UIPageBrowser.msg.NoPermission=Non hai i permessi per accedere alla pagina.
 UIPageBrowser.msg.PageNotExist=La pagina non esiste.
 UIPageBrowser.msg.UserNotPermission=Non hai i permessi per accedere al nodo della pagina.
@@ -542,7 +542,7 @@ UIPageNodeForm.label.pageName=Nome:
 UIPageNodeForm.Icon.title.SetDefault=Ottieno il Default
 UIPageNodeForm.tab.label.PageNodeSetting=Preferenze del Nodo della Pagina
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Selettore della Pagina
+UIPageNodeForm.tab.label.UIPageSelector=Selettore della Pagina
 UIPageNodeForm.action.Save=#{word.save}
 UIPageNodeForm.action.Back=#{word.back}
 
