--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ru.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_ru.properties
@@ -376,18 +376,18 @@ UIGroupSelector.action.done=Завершить
   #              org.exoplatform.portal.component.customization.UIPageSelector#
   #############################################################################
   
-UIPageSelector2.header.name=Название
-UIPageSelector2.header.id=Идентификатор страницы
-UIPageSelector2.header.accessGroups=Группы доступа
-UIPageSelector2.header.title=#{word.title}
-UIPageSelector2.header.action=#{word.action}
-UIPageSelector2.label.clearPage=Очистить страницу
-UIPageSelector2.label.createPage=Создать страницу
-UIPageSelector2.label.searchandSelectPage=Поиск и выбор страницы
-UIPageSelector2.label.currentSelectedPage=Информация о выбранной странице
-UIPageSelector2.label.title=Заголовок
-UIPageSelector2.label.name=#{word.name}
-UIPageSelector2.label.accessGroups=Группы доступа
+UIPageSelector.header.name=Название
+UIPageSelector.header.id=Идентификатор страницы
+UIPageSelector.header.accessGroups=Группы доступа
+UIPageSelector.header.title=#{word.title}
+UIPageSelector.header.action=#{word.action}
+UIPageSelector.label.clearPage=Очистить страницу
+UIPageSelector.label.createPage=Создать страницу
+UIPageSelector.label.searchandSelectPage=Поиск и выбор страницы
+UIPageSelector.label.currentSelectedPage=Информация о выбранной странице
+UIPageSelector.label.title=Заголовок
+UIPageSelector.label.name=#{word.name}
+UIPageSelector.label.accessGroups=Группы доступа
 UIPageBrowser.msg.NoPermission=У Вас нету прав доступа к этой странице.
 UIPageBrowser.msg.PageNotExist=Страница не существует.
 UIPageBrowser.msg.UserNotPermission=У Вас нету прав для доступа к страницам узла.
@@ -498,7 +498,7 @@ UIPageNodeForm.label.endPublicationDate=Конец публикации:
 UIPageNodeForm.Icon.title.SetDefault=По умолчанию
 UIPageNodeForm.tab.label.PageNodeSetting=Настройки узла страницы
 UIPageNodeForm.tab.label.Icon=#{word.icon}
-UIPageNodeForm.tab.label.UIPageSelector2=Страницы
+UIPageNodeForm.tab.label.UIPageSelector=Страницы
 
 
   #############################################################################
