EXOGTN-387 Scalable Page Loading

--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_fr.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_fr.properties
@@ -509,10 +509,16 @@ UIPageNodeForm.tab.label.UIPageSelector=Sélecteur de page
   #############################################################################
   
 UIPageBrowse.deletePage=Confirmez-vous la suppression de cette page ?
-UIPageSearch.label.option.ownerType=Type de propriétaire
-UIPageSearch.label.option.ownerId=Propriétaire
-UIPageSearch.label.option.name=Nom
-UIPageSearch.label.option.title=#{word.title}
+UIPageSearchForm.label.QuickSearch=Rechercher
+UIPageSearchForm.label.siteName=Nom du site
+UIPageSearchForm.label.pageTitle=Titre
+UIPageSearchForm.label.searchOption=Type
+UIPageSearchForm.label.option.ownerType=Type de propriétaire
+UIPageSearchForm.label.option.ownerId=Propriétaire
+UIPageSearchForm.label.option.name=Nom
+UIPageSearchForm.label.option.title=#{word.title}
+UIPageSearchForm.label.option.portal=portail
+UIPageSearchForm.label.option.group=groupe
 
   #############################################################################
   #    org.exoplatform.portal.component.customization.UIPageNavigationForm    #
