--- a/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_vi.properties
+++ b/web/portal/src/main/webapp/WEB-INF/classes/locale/portal/webui_vi.properties
@@ -514,10 +514,16 @@ UIPageNodeForm.action.Back=#{word.back}
   #############################################################################
   
 UIPageBrowse.deletePage=Bạn có muốn xóa trang này không?
-UIPageSearch.label.option.ownerType=Kiểu người sở hữu
-UIPageSearch.label.option.ownerId=Mã người sở hữu
-UIPageSearch.label.option.name=Tên
-UIPageSearch.label.option.title=#{word.title}
+UIPageSearchForm.label.QuickSearch=Tìm kiếm
+UIPageSearchForm.label.siteName=Tên Site
+UIPageSearchForm.label.pageTitle=Tiêu đề trang
+UIPageSearchForm.label.searchOption=Loại
+UIPageSearchForm.label.option.ownerType=Kiểu người sở hữu
+UIPageSearchForm.label.option.ownerId=Mã người sở hữu
+UIPageSearchForm.label.option.name=Tên
+UIPageSearchForm.label.option.title=#{word.title}
+UIPageSearchForm.label.option.portal=portal
+UIPageSearchForm.label.option.group=group
 
   #############################################################################
   #    org.exoplatform.portal.component.customization.UIPageNavigationForm    #
